新增: 添加创建模板功能并更新本地化
在 index.ts 中新增 createTemplate 函数，用于处理项目模板的创建。
更新了英文和中文本地化文件（en.js、zh.js），添加了创建模板相关的新字符串。
修改了 package.json，添加了与模板创建相关的新消息和方法。
更新了 main.ts，为扩展注册新的 createTemplate 方法。

--- a/package.json
+++ b/package.json
@@ -43,12 +43,22 @@
                 "path": "i18n:game-dashboard.game_framework",
                 "label": "i18n:game-dashboard.download_tools",
                 "message": "download_tools"
+            },
+            {
+                "path": "i18n:game-dashboard.game_framework",
+                "label": "i18n:game-dashboard.createTemplate",
+                "message": "create_template"
             }
         ],
         "messages": {
             "download_tools": {
                 "methods": [
                     "downloadTools"
+                ]
+            },
+             "create_template": {
+                "methods": [
+                    "createTemplate"
                 ]
             }
         }
